--- a/public/thing.less
+++ b/public/thing.less
@@ -1,5 +1,7 @@
 body {
-  background: #cde6d5;
+  background: url('img/snowy-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 div {
